--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@headlessui/react": "^1.7.0",
     "@heroicons/react": "^2.0.10",
+    "firebase": "^9.10.0",
+    "firebase-admin": "^11.0.1",
+    "moment": "^2.29.4",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
